@@ -9,6 +9,8 @@ import mezz.jei.common.config.IIngredientFilterConfig;
 import mezz.jei.common.util.SafeIngredientUtil;
 import mezz.jei.common.util.StringUtil;
 import mezz.jei.common.util.Translator;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.FormattedText;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.CreativeModeTab;
 import net.minecraft.world.item.CreativeModeTabs;
@@ -102,7 +104,7 @@ public class ListElementInfo<V> implements IListElementInfo<V> {
 
 	@Override
 	public String getModNameForSorting() {
-		return modNames.get(0);
+		return modNames.getFirst();
 	}
 
 	@Override
@@ -123,16 +125,29 @@ public class ListElementInfo<V> implements IListElementInfo<V> {
 		TooltipFlag.Default tooltipFlag = config.getSearchAdvancedTooltips() ? TooltipFlag.Default.ADVANCED : TooltipFlag.Default.NORMAL;
 		tooltipFlag = tooltipFlag.asCreative();
 
-		ListElementInfoTooltip tooltip = new ListElementInfoTooltip();
-		SafeIngredientUtil.getTooltip(tooltip, ingredientManager, ingredientRenderer, value, tooltipFlag);
-		Set<String> strings = tooltip.getStrings();
+		List<Component> tooltip = SafeIngredientUtil.getPlainTooltipForSearch(ingredientManager, ingredientRenderer, value, tooltipFlag);
+		Set<String> strings = getStrings(tooltip);
 
-		strings.remove(this.names.get(0));
-		strings.remove(this.modNames.get(0).toLowerCase(Locale.ENGLISH));
-		strings.remove(this.modIds.get(0));
+		strings.remove(this.names.getFirst());
+		strings.remove(this.modNames.getFirst().toLowerCase(Locale.ENGLISH));
+		strings.remove(this.modIds.getFirst());
 		strings.remove(resourceLocation.getPath());
 
 		return strings;
+	}
+
+	public static Set<String> getStrings(@Unmodifiable List<Component> tooltip) {
+		Set<String> result = new HashSet<>();
+		for (FormattedText component : tooltip) {
+			String string = component.getString();
+			string = StringUtil.removeChatFormatting(string);
+			string = Translator.toLowercaseWithLocale(string);
+			// Split tooltip strings into words to keep them from being too long.
+			// Longer strings are more expensive for the suffix tree to handle.
+			String[] strings = string.split(" ");
+			Collections.addAll(result, strings);
+		}
+		return result;
 	}
 
 	@Override
