@@ -1,11 +1,14 @@
 package mezz.jei.library.plugins.vanilla.cooking;
 
+import com.mojang.serialization.Codec;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.placement.HorizontalAlignment;
 import mezz.jei.api.gui.placement.VerticalAlignment;
 import mezz.jei.api.gui.widgets.IRecipeExtrasBuilder;
+import mezz.jei.api.helpers.ICodecHelper;
 import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.recipe.IFocusGroup;
+import mezz.jei.api.recipe.IRecipeManager;
 import mezz.jei.api.recipe.RecipeIngredientRole;
 import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.AbstractRecipeCategory;
@@ -13,16 +16,17 @@ import mezz.jei.library.util.RecipeUtil;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.crafting.AbstractCookingRecipe;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.level.block.Block;
 
-public abstract class AbstractCookingCategory<T extends AbstractCookingRecipe> extends AbstractRecipeCategory<T> {
+public abstract class AbstractCookingCategory<T extends AbstractCookingRecipe> extends AbstractRecipeCategory<RecipeHolder<T>> {
 	protected final int regularCookTime;
 
-	public AbstractCookingCategory(IGuiHelper guiHelper, RecipeType<T> recipeType, Block icon, String translationKey, int regularCookTime) {
+	public AbstractCookingCategory(IGuiHelper guiHelper, RecipeType<RecipeHolder<T>> recipeType, Block icon, String translationKey, int regularCookTime) {
 		this(guiHelper, recipeType, icon, translationKey, regularCookTime, 82, 54);
 	}
 
-	public AbstractCookingCategory(IGuiHelper guiHelper, RecipeType<T> recipeType, Block icon, String translationKey, int regularCookTime, int width, int height) {
+	public AbstractCookingCategory(IGuiHelper guiHelper, RecipeType<RecipeHolder<T>> recipeType, Block icon, String translationKey, int regularCookTime, int width, int height) {
 		super(
 			recipeType,
 			Component.translatable(translationKey),
@@ -34,10 +38,12 @@ public abstract class AbstractCookingCategory<T extends AbstractCookingRecipe> e
 	}
 
 	@Override
-	public void setRecipe(IRecipeLayoutBuilder builder, T recipe, IFocusGroup focuses) {
+	public void setRecipe(IRecipeLayoutBuilder builder, RecipeHolder<T> recipeHolder, IFocusGroup focuses) {
+		T recipe = recipeHolder.value();
+
 		builder.addInputSlot(1, 1)
 			.setStandardSlotBackground()
-			.addIngredients(recipe.getIngredients().get(0));
+			.addIngredients(recipe.getIngredients().getFirst());
 
 		builder.addSlot(RecipeIngredientRole.RENDER_ONLY, 1, 37)
 			.setStandardSlotBackground();
@@ -48,7 +54,8 @@ public abstract class AbstractCookingCategory<T extends AbstractCookingRecipe> e
 	}
 
 	@Override
-	public void createRecipeExtras(IRecipeExtrasBuilder builder, T recipe, IFocusGroup focuses) {
+	public void createRecipeExtras(IRecipeExtrasBuilder builder, RecipeHolder<T> recipeHolder, IFocusGroup focuses) {
+		T recipe = recipeHolder.value();
 		int cookTime = recipe.getCookingTime();
 		if (cookTime <= 0) {
 			cookTime = regularCookTime;
@@ -58,11 +65,12 @@ public abstract class AbstractCookingCategory<T extends AbstractCookingRecipe> e
 		builder.addAnimatedRecipeFlame(300)
 			.setPosition(1, 20);
 
-		addExperience(builder, recipe);
-		addCookTime(builder, recipe);
+		addExperience(builder, recipeHolder);
+		addCookTime(builder, recipeHolder);
 	}
 
-	protected void addExperience(IRecipeExtrasBuilder builder, T recipe) {
+	protected void addExperience(IRecipeExtrasBuilder builder, RecipeHolder<T> recipeHolder) {
+		T recipe = recipeHolder.value();
 		float experience = recipe.getExperience();
 		if (experience > 0) {
 			Component experienceString = Component.translatable("gui.jei.category.smelting.experience", experience);
@@ -73,7 +81,8 @@ public abstract class AbstractCookingCategory<T extends AbstractCookingRecipe> e
 		}
 	}
 
-	protected void addCookTime(IRecipeExtrasBuilder builder, T recipe) {
+	protected void addCookTime(IRecipeExtrasBuilder builder, RecipeHolder<T> recipeHolder) {
+		T recipe = recipeHolder.value();
 		int cookTime = recipe.getCookingTime();
 		if (cookTime <= 0) {
 			cookTime = regularCookTime;
@@ -90,12 +99,18 @@ public abstract class AbstractCookingCategory<T extends AbstractCookingRecipe> e
 	}
 
 	@Override
-	public boolean isHandled(T recipe) {
+	public boolean isHandled(RecipeHolder<T> recipeHolder) {
+		T recipe = recipeHolder.value();
 		return !recipe.isSpecial();
 	}
 
 	@Override
-	public ResourceLocation getRegistryName(T recipe) {
-		return recipe.getId();
+	public ResourceLocation getRegistryName(RecipeHolder<T> recipe) {
+		return recipe.id();
+	}
+
+	@Override
+	public Codec<RecipeHolder<T>> getCodec(ICodecHelper codecHelper, IRecipeManager recipeManager) {
+		return codecHelper.getRecipeHolderCodec();
 	}
 }
